更新个人信息接口 上传图片， 商品发布接口

--- a/Beehive/LLCore/Network/Resources/NetWorkConfig.json
+++ b/Beehive/LLCore/Network/Resources/NetWorkConfig.json
@@ -55,4 +55,19 @@
         "module"  : "IndexService.asmx",
         "action"  : "GetIndexData"
     },
+    "GetInvitationInfo": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetInvitationInfo"
+    },
+    "AddGoodsInfo": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "AddGoodsInfo"
+    },
+    "UpdateUserInfo": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "UpdateUserInfo"
+    },
 }
