兑换商品详情接口， 钱包接口

--- a/Beehive/LLCore/Network/Resources/NetWorkConfig.json
+++ b/Beehive/LLCore/Network/Resources/NetWorkConfig.json
@@ -70,6 +70,11 @@
         "module"  : "IndexService.asmx",
         "action"  : "RedEnvelopesCollection"
     },
+    "BuyGoods": {
+        "protocol": "http",
+        "module"  : "IndexService.asmx",
+        "action"  : "BuyGoods"
+    },
     "GetInvitationInfo": {
         "protocol": "http",
         "module"  : "MyService.asmx",
@@ -84,5 +89,20 @@
         "protocol": "http",
         "module"  : "MyService.asmx",
         "action"  : "UpdateUserInfo"
+    },
+    "GetMyMoneyInfo": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetMyMoneyInfo"
+    },
+    "GetCashWithdrawalExplain": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetCashWithdrawalExplain"
+    },
+    "GetGiveExplain": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetGiveExplain"
     },
 }
