--- a/Beehive/Info.plist
+++ b/Beehive/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
-	<string>Beehive</string>
+	<string>蜂巢红包</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -18,44 +18,6 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-	<key>CFBundleVersion</key>
-	<string>1</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>App需要您的同意，否则无法正常使用地图功能</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>App需要您的同意，否则无法正常使用地图功能</string>
-	<key>NSLocationUsageDescription</key>
-	<string>App需要您的同意，否则无法正常使用地图功能</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App需要您的同意，否则无法正常使用地图功能</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>App需要您的同意，否则无法使用发布等功能</string>
-	<key>NSCameraUsageDescription</key>
-	<string>App需要您的同意，否则无法使用拍照发布等功能</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -99,6 +61,8 @@
 			</array>
 		</dict>
 	</array>
+	<key>CFBundleVersion</key>
+	<string>1</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wechat</string>
@@ -147,6 +111,42 @@
 		<string>timopensdkdataline</string>
 		<string>wtlogintimV1</string>
 		<string>timapiV1</string>
+	</array>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>App需要您的同意，否则无法使用拍照发布等功能</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>App需要您的同意，否则无法正常使用地图功能</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>App需要您的同意，否则无法正常使用地图功能</string>
+	<key>NSLocationUsageDescription</key>
+	<string>App需要您的同意，否则无法正常使用地图功能</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App需要您的同意，否则无法正常使用地图功能</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>App需要您的同意，否则无法使用发布等功能</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
