提现，我的关注，版本更新 接口

--- a/Beehive/LLCore/Network/Resources/NetWorkConfig.json
+++ b/Beehive/LLCore/Network/Resources/NetWorkConfig.json
@@ -125,5 +125,20 @@
         "module"  : "MyService.asmx",
         "action"  : "BuyVIP"
     },
+    "CashWithdrawal": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "CashWithdrawal"
+    },
+    "GetAppVersion": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetAppVersion"
+    },
+    "GetFollowList": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetFollowList"
+    },
     
 }
