抢红包，商品兑换订单

--- a/Beehive/LLCore/Network/Resources/NetWorkConfig.json
+++ b/Beehive/LLCore/Network/Resources/NetWorkConfig.json
@@ -145,6 +145,11 @@
         "module"  : "MyService.asmx",
         "action"  : "GetAppVersion"
     },
+    "FollowUser": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "FollowUser"
+    },
     "GetFollowList": {
         "protocol": "http",
         "module"  : "MyService.asmx",
