--- a/Beehive/LLCore/Network/Resources/NetWorkConfig.json
+++ b/Beehive/LLCore/Network/Resources/NetWorkConfig.json
@@ -180,6 +180,16 @@
         "module"  : "MyService.asmx",
         "action"  : "GetRedEnvelopesHistoryList"
     },
+    "GetWinningList": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetWinningList"
+    },
+    "GetMyCollectionList": {
+        "protocol": "http",
+        "module"  : "MyService.asmx",
+        "action"  : "GetMyCollectionList"
+    },
     "GetDataInfo": {
         "protocol": "http",
         "module"  : "BusinessService.asmx",
