微信支付宝 配置信息

--- a/Beehive/Info.plist
+++ b/Beehive/Info.plist
@@ -27,7 +27,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx3c8bc97987792355</string>
+				<string>wxe0de70ea4dbdbcc9</string>
 			</array>
 		</dict>
 		<dict>
