验证码获取 倒计时

--- a/Beehive/LLCore/Network/Resources/NetWorkConfig.json
+++ b/Beehive/LLCore/Network/Resources/NetWorkConfig.json
@@ -55,6 +55,11 @@
         "module"  : "SessionService.asmx",
         "action"  : "UpdatePhone"
     },
+    "BindPhone": {
+        "protocol": "http",
+        "module"  : "SessionService.asmx",
+        "action"  : "BindPhone"
+    },
     "BindingWechat": {
         "protocol": "http",
         "module"  : "SessionService.asmx",
